proxy/kube/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: proxy
  labels:
    app: proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: proxy
  template:
    metadata:
      labels:
        app: proxy
    spec:
      containers:
      - name: proxy
        image: localhost:5000/proxy:latest
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: "20m"
          limits:
            memory: "64Mi"
            cpu: "100m"
        volumeMounts:
        - name: config-volume
          mountPath: /app/config
      volumes:
      - name: config-volume
        configMap:
          name: proxy
          items:
          - key: config.yml
            path: config.yml
