proxy/kube/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: proxy
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: mockserver
    http:
      paths:
      - backend:
          serviceName: proxy
          servicePort: 8080
  - host: www.apichart.me
    http:
      paths:
      - backend:
          serviceName: proxy
          servicePort: 8080
  - host: apichart.me
    http:
      paths:
      - backend:
          serviceName: proxy
          servicePort: 8080
